# BlueprintCapturePipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: example_session.yaml
docs/: ARKIT_INTEGRATION.md  DWM_COMPATIBILITY.md  DWM_TECHNICAL_SUMMARY.md  RENDERING.md  SCALE_CALIBRATION.md  SETUP.md  job-stubs.md  pipeline-overview.md
functions/: requirements.txt  storage_trigger.py
scripts/: check_dependencies.py  deploy_cloud.sh  render_static_scene.py  setup_cuda.sh  setup_environment.py
src/blueprint_pipeline/: __init__.py  arkit_loader.py  ios_manifest.py  models.py  orchestrator.py  pipeline.py  runner.py
src/blueprint_pipeline/jobs/: __init__.py  articulation.py  base.py  frame_extraction.py  mesh.py  object_assetization.py  reconstruction.py  usd_authoring.py
src/blueprint_pipeline/masking/: __init__.py  dynamic_mask.py
src/blueprint_pipeline/reconstruction/: __init__.py  gaussian_splatting.py  point_cloud.py
src/blueprint_pipeline/utils/: __init__.py  gcs.py  gpu.py  io.py  logging.py
src/blueprint_pipeline/video2zeroscene/: __init__.py  assetize.py  export.py  ingest.py  interfaces.py  lift.py  mesh.py  pipeline.py  slam.py  tracks.py
src/blueprint_pipeline/video2zeroscene/rendering/: __init__.py  camera_utils.py  cli.py  gaussian_model.py  renderer.py
src/blueprint_pipeline/video2zeroscene/rendering/rasterizer/: __init__.py  backend_selector.py  base.py  cpu_rasterizer.py  cuda_rasterizer.py  gsplat_rasterizer.py
